--- a/docs/99.blog/2.v2-beta.md
+++ b/docs/99.blog/2.v2-beta.md
@@ -23,7 +23,7 @@ Thanks to evolving Web standards and improved runtime support (such as [Deno](ht
 
 ## Srvx: Universal Server API
 
-A major challenge is that Node.js lacks native support for Web-standard HTTP servers. Adapters are needed to bridge `node.http.IncomingMessage` to `Request`, and to handle `Response` via `node.http.ServerResponse`. Existing adapters did not fully meet H3's requirements for modularity, performance, and compatibility. We have implemented a [compatibility layer](https://srvx.h3.dev/guide/node) that synchronizes interfaces and achieves up to **90%** of `node:http` performance—almost the best possible performances today comparing to alternatives. see [benchmarks](https://github.com/h3js/srvx/tree/main/test/bench-node)).
+A major challenge is that Node.js lacks native support for Web-standard HTTP servers. Adapters are needed to bridge `node.http.IncomingMessage` to `Request`, and to handle `Response` via `node.http.ServerResponse`. As existing adapters did not fully meet H3's requirements, We have implemented a [compatibility layer](https://srvx.h3.dev/guide/node) that synchronizes interfaces and achieves up to **90%** of `node:http` performance. Almost the best in class for performances today comparing to alternatives (see [benchmarks](https://github.com/h3js/srvx/tree/main/test/bench-node)).
 
 Furthermore, each runtime that pioneered adopting Web standards for servers did not agree on specific implementation details. Typically, all new server runtimes accept a [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-like handler, using [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) as input and returning a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response). However, since Web standards were not initially designed for server contexts, they lack standardized ways to access request context, IP information, handle WebSocket upgrades, or set server options. Consequently, each runtime created its own extensions. Today, initiatives like [WinterTC](https://wintertc.org/faq) aim to establish cross-runtime interoperability over time.
 
@@ -35,9 +35,8 @@ import { serve } from "srvx";
 
 serve({
   port: 3000,
-  fetch(request) {
-    // request.ip
-    // request.runtime?.{bun,deno,node,cloudflare,...}
+  fetch(req) {
+    // req.url, req.ip, req.waitUntil, req.runtime?.{bun,deno,node,cloudflare,...}
     return new Response("👋 Hello there!");
   },
 });
@@ -53,7 +52,7 @@ With srvx handling runtime-specific API mappings, H3 can remain simpler, focusin
 Adopting Web APIs and leveraging [💥 srvx](https://srvx.h3.dev) simplified H3’s scope significantly.
 
 - ✅ A Web-standard server optimized for performance.
-- ✅ Simple responses and error handling (return or throw directly).
+- ✅ Simple and typed responses and error handling (return or throw directly).
 - ✅ Fast routing via the tiny router ([🌳 rou3](https://github.com/h3js/rou3)).
 - ✅ Middleware for request, response, and error interception.
 - ✅ Tiny core and composable utilities.
@@ -90,15 +89,60 @@ app.any("/**", async (event) => {
 
 ## Chainable Middleware
 
-H3 now offers an ergonomic, composable way to chain middleware inspired by [Hono middleware](https://hono.dev/docs/guides/middleware) 💛:
+H3 now offers an ergonomic, composable way to chain middleware using `next()` function inspired by [Hono middleware](https://hono.dev/docs/guides/middleware) 💛:
 
-```js
-app.use("/", async (event, next) => {
-  console.log(`[${event.req.method}] ${event.req.url}`);
-  const rawResponse = await next();
+```js [global middleware]
+import { H3 } from "h3";
+
+const app = new H3().use(async (event, next) => {
+  // ... before response ...
+  const body = await next();
+  // ... after response ...
   event.res.headers.append("x-middleware", "works");
-  return rawResponse;
+  event.waitUntil(sendMetrics(event));
+  return body;
 });
+```
+
+```js [handler middleware]
+import { defineEventHandler, basicAuth } from "h3";
+
+export default defineEventHandler({
+  middleware: [basicAuth({ password: "test" })],
+  handler: (event) => `Hello ${event.context.basicAuth?.username}!`,
+});
+```
+
+```js [onRequest]
+import { H3, onRequest } from "h3";
+
+const app = new H3().use(
+  onRequest((event) => {
+    console.log(`Request: [${event.req.method}] ${event.url.pathname}`);
+  }),
+);
+```
+
+```js [onResponse]
+import { H3, onResponse } from "h3";
+
+const app = new H3().use(
+  onResponse((event, { body }) => {
+    console.log(`Response: [${event.req.method}] ${event.url.pathname}`, body);
+  }),
+);
+```
+
+```js [onError]
+import { H3, onError } from "h3";
+
+const app = new H3().use(
+  onError((event, { body }) => {
+    console.error(
+      `[${event.req.method}] ${event.url.pathname} !! ${error.message}`,
+    );
+  }),
+);
 ```
 
 > [!NOTE]
@@ -108,27 +152,20 @@ app.use("/", async (event, next) => {
 
 One classic way to evaluate web frameworks is by comparing RPS (Requests Per Second). However, this metric can be misleading, as it is influenced by external factors such as the OS networking layer and runtime-specific behavior. It also overlooks other important aspects like bundle size and initialization time.
 
-We approached benchmarking with a new system that focuses on measuring the overhead introduced by the framework itself. Our goal is to optimize all relevant measurements together, making it as close as possible to a baseline where H3 is not added or used.
+We approached benchmarking with a new system that focuses on measuring the overhead introduced by the framework itself. Our goal is to optimize all relevant measurements together, making it as close as possible to a baseline where H3 is not added or used: Response latency (`app.fetch(request)`), App initialization speed and Bundle size of minimal app.
 
-- Response latency (`app.fetch(request)`)
-- App initialization speed
-- Bundle size
+This method, allowed H3 v2 to have optimized latency improvements per request and dramatically smaller core bundle size. We also made a brand-new tiny router ([🌳 rou3](https://github.com/h3js/rou3)) based on this new metrics.
 
-This method, allowed H3 v2 to be optimized on µs-level latency improvements per request and dramatically smaller core bundle size.
-
-> [!NOTE]
-> Framework choice barely impacts application performance compared to network latency. These benchmarks primarily guide internal optimizations.
-
-| Measurement            | H3 v1   | H3 v2                |
-| ---------------------- | ------- | -------------------- |
-| Web API latency (node) | 36 µs   | 7 µs (5x faster)     |
-| Web API latency (bun)  | 3.3 µs  | 27.74 µs (8x faster) |
-| Web API latency (deno) | 1.3 ms  | 8 µs (160x faster!)  |
-| App bundle (min)       | 101 kB  | 9,1 kB (91% smaller) |
-| App bundle (min+gzip)  | 39.6 kB | 3.6 kB (90% smaller) |
+| Measurement      | H3 v1                                      | 🚀 H3 v2                                                                                      |
+| ---------------- | ------------------------------------------ | --------------------------------------------------------------------------------------------- |
+| Request Handling | Node: 36 µs <br> Bun: 27 µs <br> Deno 7 ms | Node: 7 µs (**5x faster**) <br> Bun: 3 µs (**9x faster**) <br> Deno: 1.2 µs (**156x faster**) |
+| App Bundle Size  | min: 101 kB <br> min+gzip: 39.6 kB         | min: 9,1 kB (**91% smaller**) <br> min+gzip: 3.6 kB (**90% smaller**)                         |
 
 > [!NOTE]
-> The benchmarks above compare the H3 core with the **Web Standard** target and do not include adapters. The effect on real-world performance may be negligible in larger applications. See the [benchmarks source](https://github.com/h3js/h3/tree/main/test/bench) for details.
+> The benchmarks above compare the H3 core using the **Web Standard** target and do not include adapters. They are intended primarily for internal optimization purposes. See the [benchmark sources](https://github.com/h3js/h3/tree/main/test/bench) for details.
+
+> [!TIP]
+> New request handling times are nearly equivalent to (sometimes faster than) using plain `fetch` and `new URL(req.url).pathname` for routing.
 
 ## Migration from Version 1
 
@@ -148,6 +185,10 @@ Under the H3 umbrella, we maintain several key components for universal JavaScri
 - [🌳 rou3](https://github.com/h3js/rou3): Lightweight JavaScript router.
 - [💥 srvx](https://srvx.h3.dev): Universal Web-based Server API.
 - [🔌 crossws](https://crossws.h3.dev): Cross-platform WebSocket server.
+
+## ❤️ Special Thanks
+
+This release would not have been possible without wonderful [contributors](https://github.com/h3js/h3/graphs/contributors), feedback from the [community](https://discord.h3.dev), new runtimes including [Deno](https://deno.com/) and [Bun](https://bun.sh/), and Web-standard frameworks including [Hono](https://hono.dev/) and [Elysia](https://elysiajs.com/), which inspired many of the changes in this version of H3, as well as [sponsors](/#sponsors) who made it possible to work on open source.
 
 ## Roadmap to v2 Stable
 
