--- a/docs/99.blog/2.v2-beta.md
+++ b/docs/99.blog/2.v2-beta.md
@@ -137,7 +137,7 @@ const app = new H3().use(
 import { H3, onError } from "h3";
 
 const app = new H3().use(
-  onError((event, { body }) => {
+  onError((event, error) => {
     console.error(
       `[${event.req.method}] ${event.url.pathname} !! ${error.message}`,
     );
