--- a/docs/99.blog/2.v2-beta.md
+++ b/docs/99.blog/2.v2-beta.md
@@ -83,7 +83,7 @@ app.any("/**", async (event) => {
 
   event.res.headers.set("Content-Type", "application/json");
 
-  return Response.json({ hello: "web" });
+  return { hello: "web" };
 });
 ```
 
