--- a/docs/99.blog/2.v2-beta.md
+++ b/docs/99.blog/2.v2-beta.md
@@ -169,7 +169,7 @@ This method, allowed H3 v2 to have optimized latency improvements per request an
 
 ## Migration from Version 1
 
-We've minimized breaking changes.
+We've tried to minimize breaking changes. Almost all composable utilities have been ported for backward compatibility, and the main changes are in the `app` API.
 
 ::read-more{to="/migration"}
 Check out new v2 [Migration Guide](/migration).
