--- a/docs/99.blog/2.v2-beta.md
+++ b/docs/99.blog/2.v2-beta.md
@@ -49,13 +49,13 @@ With srvx handling runtime-specific API mappings, H3 can remain simpler, focusin
 
 ## H3: Tiny Server Composer 🎶
 
-Adopting Web APIs and leveraging [💥 srvx](https://srvx.h3.dev) simplified H3’s scope significantly.
+Adopting Web APIs and leveraging [💥 srvx](https://srvx.h3.dev) simplified H3’s scope significantly without worry about runtime differences.
 
 - ✅ A Web-standard server optimized for performance.
 - ✅ Simple and typed responses and error handling (return or throw directly).
 - ✅ Fast routing via the tiny router ([🌳 rou3](https://github.com/h3js/rou3)).
 - ✅ Middleware for request, response, and error interception.
-- ✅ Tiny core and composable utilities.
+- ✅ Tiny core and lots of composable, treeshakable utilities.
 
 ```js
 import { H3, serve } from "h3";
