docs: improve and updates

--- a/docs/1.guide/4.event.md
+++ b/docs/1.guide/4.event.md
@@ -6,7 +6,7 @@ icon: material-symbols-light:data-object
 
 > Event object carries incoming request, prepared response and context.
 
-Every time a new HTTP request comes, h3 internally creates an Event object and passes it though event handlers until sending the response.
+Every time a new HTTP request comes, H3 internally creates an Event object and passes it though event handlers until sending the response.
 
 An event is passed through all the lifecycle hooks and composable utils to use it as context.
 
@@ -49,6 +49,7 @@ app.get("/", async (event) => {
   const bodyStream = await event.req.body;
   const textBody = await event.req.text();
   const jsonBody = await event.req.json();
+  const formDataBody = await event.req.formData();
 
   return "OK";
 });
