--- a/docs/1.guide/1.index.md
+++ b/docs/1.guide/1.index.md
@@ -4,18 +4,14 @@ icon: ph:book-open-duotone
 
 # Getting Started
 
-> Getting started with h3
+> Getting started with H3
 
 ## Overview
 
 H3 (short for HTTP, pronounced as /eɪtʃθriː/, like h-3) is a lightweight, ultra-fast and [composable](/utils) server framework for JavaScript based on Web standards working on any JavaScript runtime.
 
 > [!IMPORTANT]
-> You are reading h3 version 2 (release candidate) docs.
-
-::read-more{to="https://nitro.build"}
-Check out [Nitro](https://nitro.build) for a full featured server toolkit.
-::
+> You are currently reading H3 version 2 (beta) documentation. See [v1.h3.dev](https://v1.h3.dev/) for older docs.
 
 ## Quick Start
 
@@ -28,9 +24,7 @@ Create a new file `server.mjs`:
 ```ts [server.mjs]
 import { H3, serve } from "h3";
 
-const app = new H3();
-
-app.get("/", () => "⚡️ Tadaa!");
+const app = new H3().get("/", () => "⚡️ Tadaa!");
 
 serve(app, { port: 3000 });
 ```
@@ -55,19 +49,19 @@ bun run --watch server.mjs
 
 And tadaa! We have a web server running locally.
 
-### What happened?
+### What Happened?
 
 Okay, let's now break down our hello world example.
 
-We first created an [h3 app instance](/guide/app) using `new H3()`:
+We first created an [H3 App Instance](/guide/app) using `new H3()`:
 
 ```ts
-const app = new H3(/* optional config */);
+const app = new H3();
 ```
 
-`app` is a tiny server capable of matching routes, generating response and handling lifecycle hooks such as errors.
+`app` is a tiny server capable of matching routes, running middleware, generating response and handling lifecycle hooks such as errors.
 
-Then we create register a route for handling HTTP GET requests to `/` path.
+Then we add a route for handling HTTP GET requests to `/` path.
 
 ```ts
 app.get("/", () => {
@@ -76,43 +70,43 @@ app.get("/", () => {
 ```
 
 ::tip
-Router is powered by [🌳 rou3](https://github.com/h3js/rou3), an ultra-fast and tiny route matcher engine.
+Routing is powered by [🌳 Rou3](https://github.com/h3js/rou3), an ultra-fast and tiny route matcher engine.
 ::
 
-In h3 event handlers, all you have to do to make a response, is to simply return it! Responses can be simple **string**, **JSON object**, **binary data**, **stream**, **error**, ... or standard [Web Response](https://developer.mozilla.org/en-US/docs/Web/API/Response/Response).
+In H3 event handlers, all you have to do to make a response, is to simply return the response body value!
 
-:read-more{title="response types" to="/guide/handler#responses-types"}
+Responses can be simple **String**, **JSON object**, **Binary data**, **Stream**, **Error**, ... or standard [Web Response](https://developer.mozilla.org/en-US/docs/Web/API/Response/Response).
+
+:read-more{title="Response Types" to="/guide/handler#responses-types"}
 
 Finally we use `serve` method to start the server listener.
 
 ::tip
 Serve method is powered by [💥 srvx](https://srvx.h3.dev/).
-
-<br> Based on runtime and export conditions, correct adapter will be auto loaded.
-<br>You can also directly export or use `app.fetch(request)`.
+<br>Based on runtime and export conditions, correct adapter will be auto loaded.
 ::
 
-### Using from CDN
+### Using H3 from CDN
 
 You can directly import h3 from CDN. This method can be used for Bun, Deno and other runtimes such as Cloudflare Workers (you need an adapter).
 
 ```js
-import { H3, toWebHandler } from "https://esm.sh/h3";
+import { H3 } from "https://esm.sh/h3";
 
 const app = new H3();
 
 export const fetch = app.fetch;
 ```
 
-## Run and deploy
+## Run and Deploy
 
-Using `serve(app, options?)` you can easily run h3 apps in [Deno](https://deno.com/), [Node.js](https://nodejs.org/) and [Bun](https://bun.sh/) runtimes.
+Using `serve(app, options?)` you can easily run H3 apps various runtimes, including [Deno](https://deno.com/), [Node.js](https://nodejs.org/) and [Bun](https://bun.sh/).
 
-:read-more{to="https://srvx.h3.dev/guide/options"}
+:read-more{to="https://srvx.h3.dev/guide/options" title="Srvx Server Options"}
 
-With the main h3 app instance you have [`app.fetch`](/guide/app#appfetchrequest-init-context) which can be directly used to run h3 apps in any web-compatible runtime or even directly called for testing purposes.
+With the main H3 app instance you have [`app.fetch`](/guide/app#appfetchrequest-init) which can be directly used to run H3 apps in any web-compatible runtime or even directly called for testing purposes.
 
-:read-more{to="/guide/app#appfetchrequest-init-context" title="app.fetch"}
+:read-more{to="/guide/app#appfetchrequest-init" title="app.fetch"}
 
 ```js [test.mjs]
 import { H3, serve } from "h3";
@@ -124,6 +118,6 @@ const response = await app.fetch("/");
 console.log(await response.text());
 ```
 
-::read-more{to="https://nitro.build"}
+<!-- ::read-more{to="https://nitro.build"}
 For zero config setup deployment to different providers, we recommend using [Nitro](https://nitro.build).
-::
+:: -->
