--- a/docs/1.guide/2.app.md
+++ b/docs/1.guide/2.app.md
@@ -4,9 +4,9 @@ icon: ic:baseline-bolt
 
 # H3 App Instance
 
-> H3 app instance is the core of a h3 server that handles incoming requests.
+> H3 app instance is the core of server that handles incoming requests.
 
-You can create a new h3 app instance using `new H3()`:
+You can create a new H3 app instance using `new H3()`:
 
 ```js [server.mjs]
 import { H3 } from "h3";
@@ -14,84 +14,67 @@ import { H3 } from "h3";
 const app = new H3(/* optional config */);
 ```
 
-## H3 App Options
-
-You can pass global app configuration when initializing an app.
-
-**Example:** Create an app with verbose logging enabled.
-
-```js
-const app = new H3({ debug: true });
-```
-
-### Global Hooks
-
-When initializing an h3 app, you can register global hooks:
-
-- `onError`
-- `onRequest`
-- `onBeforeResponse`
-
-These hooks are called for every request and can be used to add global logic to your app such as logging, error handling, etc.
-
-```js
-const app = new H3({
-  onError: (error) => {
-    console.error(error);
-  },
-  onRequest: (event) => {
-    console.log("Request:", event.path);
-  },
-});
-```
-
 ## H3 App Methods
 
-### `app.fetch(request, init?)`
+### `app.fetch`
 
 A [fetch](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-like API allowing to fetch app routes.
 
-Input can be a URL, relative path or standard [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) object.
-
-Returned value is a standard [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) promise.
-
-**Example:**
+- Input can be a URL, relative path or standard [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) object.
+- Returned value is a standard [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) promise.
 
 ```ts
 const response = await app.fetch("/");
-
 console.log(response, await response.text());
 ```
 
-### `app.handler(event)`
-
-An h3 compatible event handler useful to compose multiple h3 app instances.
-
-### `app.on(method, route, handler)`
+### `app.on`
 
 Register route handler for specific HTTP method.
 
-### `app.[method](route, handler)`
+```js
+const app = new H3().on("GET", "/", () => "OK");
+```
+
+:read-more{to="/guide/routing"}
+
+### `app.[method]`
 
 Register route handler for specific HTTP method (shortcut for `app.on(method, ...)`).
 
-### `app.all(route, handler)`
+```js
+const app = new H3().get("/", () => "OK");
+```
+
+### `app.all`
 
 Register route handler for all HTTP methods.
 
-### `app.use(middleware, opts?)`
+```js
+const app = new H3().all("/", () => "OK");
+```
+
+### `app.use`
 
 Register a global middleware handler.
 
-### `app.use(route, middleware, opts?)`
+```js
+const app = new H3()
+  .use((event) => {
+    console.log(`request: ${event.req.url}`);
+  })
+  .all("/", () => "OK");
+```
 
-Register middleware handler that runs on certain routes.
+:read-more{to="/guide/routing#adding-middleware"}
 
-### `app.mount(base, fetchHandler)`
+### `app.handler`
+
+An H3 compatible [event handler](/guide/handler) useful to compose multiple H3 app instances.
+
+### `app.mount`
 
 Mount a `.fetch` compatible server instance like [Hono](https://hono.dev/) or [Elysia](https://elysiajs.com/) under the base URL.
-
-**Example:**
 
 ```js
 import { H3 } from "h3";
@@ -110,17 +93,53 @@ const app = new H3()
 ```
 
 > [!NOTE]
-> base prefix will be removed from `request.url` passed to the mounted app.
+> Base prefix will be removed from `request.url` passed to the mounted app.
 
 > [!TIP]
 > Similarly, you can mount an H3 app in [Hono](https://hono.dev/docs/api/hono#mount) or [Elysia](https://elysiajs.com/patterns/mount#mount-1).
+
+## H3 App Options
+
+You can pass global app configuration when initializing an app.
+
+**Example:** Create an app with debug logging enabled.
+
+```js
+const app = new H3({ debug: true });
+```
+
+> [!IMPORTANT]
+> Enabling `debug` option, sends important stuff like stack traces in error responses. Only enable during development.
+
+### Global Hooks
+
+When initializing an H3 app, you can register global hooks:
+
+- `onError`
+- `onRequest`
+- `onBeforeResponse`
+
+These hooks are called for every request and can be used to add global logic to your app such as logging, error handling, etc.
+
+```js
+const app = new H3({
+  onError: (error) => {
+    console.error(error);
+  },
+  onRequest: (event) => {
+    console.log("Request:", event.path);
+  },
+  onBeforeResponse: (event) => {
+    console.log("Response:", event.path);
+  },
+});
+```
+
+> [!NOTE]
+> Global hooks only apply to main H3 app not registered sub-apps. Use [Middleware](/handler#middleware) for fine gained hooks.
 
 ## H3 App Properties
 
 ### `app.config`
 
-Global h3 instance config.
-
-### `app.websocket`
-
-Websocket hooks compatible with [🔌 crossws](https://crossws.h3.dev/).
+Global H3 instance config.
