--- a/docs/1.docs/1.guide/1.routing.md
+++ b/docs/1.docs/1.guide/1.routing.md
@@ -1,14 +1,16 @@
 ---
-icon: solar:route-linear
+icon: solar:routing-bold
 ---
 
-## Adding Routes
+# Request Handling
 
-H3 app instance has a built in router system to register routes matching patterns with parameter or specific HTTP method.
+> H3 app instance has a built in router system to register routes matching patterns with parameter or specific HTTP method.
 
-::tip
-Router is powered by [🌳 rou3](https://github.com/h3js/rou3), an ultra-fast and tiny route matcher engine.
+::read-more
+H3 Router is powered by [🌳 rou3](https://github.com/h3js/rou3), an ultra-fast and tiny route matcher engine.
 ::
+
+## Adding Routes
 
 **Example:** Register a route to match requests to the `/hello` endpoint with HTTP **GET** method:
 
