--- a/docs/1.docs/900.api/1.app.md
+++ b/docs/1.docs/900.api/1.app.md
@@ -1,8 +1,8 @@
 ---
-icon: ic:baseline-bolt
+icon: material-symbols:bolt-rounded
 ---
 
-# H3 App Instance
+# H3
 
 > H3 app instance is the core of server that handles incoming requests.
 
