--- a/docs/1.docs/900.api/2.event.md
+++ b/docs/1.docs/900.api/2.event.md
@@ -1,8 +1,8 @@
 ---
-icon: material-symbols-light:data-object
+icon: material-symbols:data-object-rounded
 ---
 
-# Event Object
+# H3Event
 
 > Event object carries incoming request, prepared response and context.
 
