--- a/docs/1.docs/901.advanced/1.websocket.md
+++ b/docs/1.docs/901.advanced/1.websocket.md
@@ -1,5 +1,5 @@
 ---
-icon: cib:socket-io
+icon: hugeicons:live-streaming-02
 ---
 
 # WebSockets
@@ -22,7 +22,7 @@ import { H3, serve, defineWebSocketHandler } from "h3";
 
 import { plugin as ws } from "crossws/server";
 
-const app = new H3()
+const app = new H3();
 
 app.get("/_ws", defineWebSocketHandler({ message: console.log }));
 
