--- a/docs/1.guide/900.api/1.h3.md
+++ b/docs/1.guide/900.api/1.h3.md
@@ -4,7 +4,7 @@ icon: material-symbols:bolt-rounded
 
 # H3
 
-> H3 app instance is the core of server that handles incoming requests.
+> H3 App Instance is the core of server that handles incoming requests.
 
 You can create a new H3 app instance using `new H3()`:
 
@@ -16,7 +16,7 @@ const app = new H3(/* optional config */);
 
 ## H3 App Methods
 
-### `app.fetch`
+### `H3.fetch`
 
 A [fetch](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-like API allowing to fetch app routes.
 
@@ -28,7 +28,7 @@ const response = await app.fetch("/");
 console.log(response, await response.text());
 ```
 
-### `app.on`
+### `H3.on`
 
 Register route handler for specific HTTP method.
 
@@ -38,7 +38,7 @@ const app = new H3().on("GET", "/", () => "OK");
 
 :read-more{to="/guide/routing"}
 
-### `app.[method]`
+### `H3.[method]`
 
 Register route handler for specific HTTP method (shortcut for `app.on(method, ...)`).
 
@@ -46,7 +46,7 @@ Register route handler for specific HTTP method (shortcut for `app.on(method, ..
 const app = new H3().get("/", () => "OK");
 ```
 
-### `app.all`
+### `H3.all`
 
 Register route handler for all HTTP methods.
 
@@ -54,7 +54,7 @@ Register route handler for all HTTP methods.
 const app = new H3().all("/", () => "OK");
 ```
 
-### `app.use`
+### `H3.use`
 
 Register a global middleware handler.
 
@@ -68,11 +68,11 @@ const app = new H3()
 
 :read-more{to="/guide/routing#adding-middleware"}
 
-### `app.handler`
+### `H3.handler`
 
 An H3 compatible [event handler](/guide/handler) useful to compose multiple H3 app instances.
 
-### `app.mount`
+### `H3.mount`
 
 Mount a `.fetch` compatible server instance like [Hono](https://hono.dev/) or [Elysia](https://elysiajs.com/) under the base URL.
 
@@ -140,6 +140,6 @@ const app = new H3({
 
 ## H3 App Properties
 
-### `app.config`
+### `H3.config`
 
 Global H3 instance config.
