--- a/docs/1.guide/1.basics/2.handler.md
+++ b/docs/1.guide/1.basics/2.handler.md
@@ -4,27 +4,23 @@ icon: fluent:arrow-routing-20-regular
 
 # Event Handlers
 
-> Event handler defines application logic.
-
-After creating an [H3 App Instance](/guide/app), you can start defining your application logic using event handlers.
-
-An event handler is a function that receives an [H3Event](/guide/event) context and returns a response.
-
-> [!TIP]
-> See possible return values in [Response Types](#responses-types)
-
-## Defining Handlers
+> An event handler is a function that receives an H3Event and returns a response.
 
 You can define typed event handlers using `defineEventHandler`.
 
-> [!NOTE]
-> Using `defineEventHandler` is optional. When using [app methods](/guide/app#h3-methods) to register routes or middleware, the type hints will be still available.
-
 ```js
-import { defineEventHandler } from "h3";
+import { H3, defineEventHandler } from "h3";
 
-defineEventHandler((event) => "Response");
+const app = new H3();
+
+const handler = defineEventHandler((event) => "Response");
+
+app.get("/", handler);
 ```
+
+> [!NOTE]
+> Using `defineEventHandler` is optional.
+> You can instead, simply use a function that accepts an [`H3Event`](/guide/api/h3event) and returns a response.
 
 The callback function can be sync or async:
 
@@ -35,10 +31,29 @@ defineEventHandler(async (event) => "Response");
 You can optionally register some [middleware](#middleware) to run with event handler to intercept request, response or errors.
 
 ```js
+import { basicAuth } from "h3";
+
 defineEventHandler({
   middleware: [basicAuth({ password: "test" })],
   handler: (event) => "Hi!",
 });
+```
+
+:read-more{to="/guide/basics/response" title="Response Handling"}
+
+:read-more{to="/guide/api/h3event" title="H3 Event"}
+
+## Handler `.fetch`
+
+Event handlers defined with `defineEventHandler`, can act as a mini Web Standard app without even using [H3](/guide/api/h3) class.
+
+```js
+const handler = defineEventHandler(
+  async (event) => `Request: ${event.req.url}`,
+);
+
+const response = await handler.fetch("http://localhost/");
+console.log(response, await response.text());
 ```
 
 ## Lazy Handlers
@@ -81,14 +96,14 @@ import { defineEventHandler } from "h3";
 export default defineEventHandler((event) => "Hello!");
 ```
 
-## Converting to H3 Handler
+## Converting to Handler
 
 There are situations that you might want to convert an event handler or utility made for Node.js or another framework to h3.
 There are built-in utils to do this.!
 
-### Converting from Web Handlers
+### From Web Handlers
 
-Request handlers with [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) => [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) syntax can be natively converted into H3 event handlers.
+Request handlers with [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) => [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) syntax can be converted into H3 event handlers using `fromWebHandler` utility or [H3.mount](/guide/api/h3#h3mount).
 
 ```js
 import { H3, fromWebHandler } from "h3";
@@ -107,9 +122,7 @@ app.get("/web", event => webHandler(event.req));
 app.mount("/web", webHandler)
 ```
 
-:read-more{to="/guide/app#appmount" title="app.mount"}
-
-### Converting from Node.js Handlers
+### From Node.js Handlers
 
 If you have a legacy request handler with `(req, res) => {}` syntax made for Node.js, you can use `fromNodeHandler` to convert it to an h3 event handler.
 
@@ -130,30 +143,3 @@ const nodeHandler = (req, res) => {
 
 app.get("/web", fromNodeHandler(nodeHandler));
 ```
-
-## Middleware
-
-You can register global middleware using [`app.use`](/guide/app#appuse) to intercept requests. They can be used to add side effects to your application such as logging, caching, etc or to modify the request or response.
-
-If you return a value from middleware, it will act as a normal event handler and sent it as response.
-
-**Example:** Simple request logger.
-
-```js [log.mjs]
-app.use((event) => {
-  console.log(`[${event.req.method}] ${event.req.url}`);
-});
-```
-
-**Example:** Intercept responses.
-
-```js [intercept.mjs]
-app.use(async (event, next) => {
-  const rawResponse = await next();
-  return rawResponse;
-});
-```
-
-You can define as much middleware as you need. They will be called in order of registration.
-
-:read-more{to="/guide/routing#adding-middleware"}
