--- a/docs/1.guide/1.basics/4.error.md
+++ b/docs/1.guide/1.basics/4.error.md
@@ -56,8 +56,9 @@ This will end the request with `400 - Bad Request` status code and the following
 > [!IMPORTANT]
 > Error `statusText` should be short (max 512 to 1024 characters) and only include tab, spaces or visible ASCII charactersand extended characters (byte value 128–255).
 
-> [!NOTE]
-> Any error that occurs during calling an event handler without using `HTTPError` will be processed as an "unhandled" error. H3 hides certain fields (`data`, `body` and `message`) in HTTP response for thiserrors for security reasons.
+## Unhandled Errors
+
+Any error that occurs during calling an [Event Handler](/guide/basics/handler) without using `HTTPError` will be processed as an "unhandled" error. H3 hides certain fields (`data`, `body` and `message`) in HTTP response for this errors for enhanced security.
 
 ```js
 app.get("/error", (event) => {
@@ -65,3 +66,28 @@ app.get("/error", (event) => {
   throw new Error("Something went wrong");
 });
 ```
+
+## Catching Errors
+
+You can use either [`onError`](/guide/api/h3#global-hooks) global hook or `onError` middleware(/guide/basics/routing#middleware) to catch errors.
+
+```js
+import { H3, onError } from "h3";
+
+// Globally handling errors
+const app = new H3({
+  onError: (error) => {
+    console.error(error);
+  },
+});
+
+// Handling errors using middleware
+app.use(
+  onError(event, (error) => {
+    console.error(error);
+  }),
+);
+```
+
+> [!IMPORTANT]
+> When using nested apps, global hooks of sub-apps will not be called. Therefore it is better to use `onError` middleware.
