--- a/docs/1.guide/1.basics/1.routing.md
+++ b/docs/1.guide/1.basics/1.routing.md
@@ -8,32 +8,55 @@ icon: solar:routing-bold
 
 ## Request Lifecycle Overview
 
-A Web Standard server is responsible for converting an incoming [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) into a final [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response).
-The ⚡ H3 core acts as a dispatcher and a minimal framework for handling requests and generating responses.
+The H3 core acts as a dispatcher and a minimal framework for handling requests and generating a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response), from an incoming [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request).
 
-1. Incoming Request (runtime)
-   - An HTTP request is made, server receives a [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) object.
-2. Accepting Request ([`h3.fetch`](/guide/api/h3))
-   - Initialize an [`H3Event`](/guide/api/h3event) instance from Request.
-   - Call [`onRequest`](/guide/api/h3#global-hooks) global hook.
-   - Call [`h3.handler`](/guide/api/h3#apphandler) with initialized event.
-3. Dispatching Request ([`h3.handler`](/guide/api/handler))
-   - Route is matched based on `request.url` and `request.method`.
-   - Global middleware are called by order.
-   - Matched route handler function is called with event.
-4. Response Handling
-   - Convert [returned response](/guide/basics/response) and prepared headers into standard [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response).
-   - Call [`onBeforeResponse`](/guide/api/h3#global-hooks) global hook.
-   - Return generated Response to runtime for sending back to the client.
+1. **Incoming Request:** When An HTTP request is made by Browser or [fetch()](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API), server fetch handler receives a [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) object.
 
-> [!NOTE]
-> Global middleware are wrappers around main handler and can intercept request, response and errors. They looks like `middlewareA(middlewareB(handler(event)))`
+```mermaid
+%%{init: {'theme':'neutral'}}%%
+flowchart LR
+  A1["<code>fetch()</code>"] --> A2["<code>server.fetch(request)</code>"]
+```
 
-> [!NOTE]
-> ​ [💥 Srvx](/guide/node) Acts as a proxy for Web Standard compatibility in Node.js and unifies runtime specific context of other runtimes.
+> [!TIP]
+> ​[💥 Srvx](https://srvx.h3.dev) provides unified `server.fetch` interface and adds [Node.js compatibility](https://srvx.h3.dev/guide/node).
 
-> [!NOTE]
-> 🚀 H3 uses srvx `FastURL` internally instead of `new URL(req.url).pathname` to optimize route matching in fast paths.
+2. **Accepting Request:** H3 Initializes an [`H3Event`](/guide/api/h3event) instance from incoming Request, calls [`onRequest`](/guide/api/h3#global-hooks) global hook and finally [`h3.handler`](/guide/api/h3#apphandler) with the initialized event.
+
+```mermaid
+%%{init: {'theme':'neutral'}}%%
+flowchart LR
+  B1["<code>new H3Event(request)</code>"] --> B2["<code>onRequest(event)</code>"] --> B3["<code>h3.handler(event)</code>"]
+
+click B1 "/guide/api/h3event"
+click B2 "/guide/api/h3#global-hooks"
+click B3 "/guide/api/h3#apphandler"
+```
+
+3. **Dispatching Request:** H3 matches route based on `request.url` and `request.method`, calls global middleware wrappers and finally matched route handler function with event.
+
+```mermaid
+%%{init: {'theme':'neutral'}}%%
+flowchart LR
+  C1["[match route]"] --> C2["middlewareA(middlewareB(route.handler(event)))"]
+
+click C1 "#routes"
+click C2 "#middleware"
+```
+
+> [!TIP]
+> 🚀 Internally, H3 uses srvx `FastURL` instead of `new URL(req.url).pathname` to optimize speed.
+
+4. **Response Handling**: H3 [converts](/guide/basics/response#response-types) returned value and prepared headers into a standard [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response), calls [`onBeforeResponse`](/guide/api/h3#global-hooks) and finally returns Response back to the server fetch handler.
+
+```mermaid
+%%{init: {'theme':'neutral'}}%%
+flowchart LR
+ D1["ReturnedValue => Response"] --> D2["<code>onBeforeResponse(response)</code>"] --> D3["Response"]
+
+click D1 "/guide/basics/response"
+click D2 "/guide/api/h3#global-hooks"
+```
 
 ## Routes
 
