--- a/docs/1.guide/0.index.md
+++ b/docs/1.guide/0.index.md
@@ -4,7 +4,7 @@ icon: pixel:play
 
 # Getting Started
 
-> Learn more and get started with H3.
+> Get started with H3.
 
 <!-- automd:file src="../.partials/beta.md" -->
 
@@ -15,13 +15,12 @@ icon: pixel:play
 
 ## Overview
 
-⚡H3 (short for H(TTP), pronounced as /eɪtʃθriː/, like h-3) is a lightweight, fast, and composable server framework for modern JavaScript runtimes. It is based on Web standard primitives such as [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request), [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response), [URL](https://developer.mozilla.org/en-US/docs/Web/API/URL), and [Headers](https://developer.mozilla.org/en-US/docs/Web/API/Headers). You can integrate H3 with any compatible runtime or [mount](/guide/api/h3#appmount) other Web-compatible handlers to H3 with almost no added latency.
+⚡ H3 (short for H(TTP), pronounced as /eɪtʃθriː/, like h-3) is a lightweight, fast, and composable server framework for modern JavaScript runtimes. It is based on web standard primitives such as [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request), [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response), [URL](https://developer.mozilla.org/en-US/docs/Web/API/URL), and [Headers](https://developer.mozilla.org/en-US/docs/Web/API/Headers). You can integrate H3 with any compatible runtime or [mount](/guide/api/h3#h3mount) other web-compatible handlers to H3 with almost no added latency.
 
-H3 is designed to be extendable and composable. Instead of providing one big core, you start with a lightweight [⚡ H3](/guide/api/h3) app and then import built-in, tree-shakable [utilities](/utils) or bring your own for more functionality.
+H3 is designed to be extendable and composable. Instead of providing one big core, you start with a lightweight [H3 instance](/guide/api/h3) and then import built-in, tree-shakable [utilities](/utils) or bring your own for more functionality.
+Composable utilities has several advantages:
 
-Based on composable utilities has several advantages:
-
-- The server only includes used code and runs it exactly where it is needed.
+- The server only includes used code and runs them exactly where is needed.
 - Application size can scale better. Usage of utilities is explicit and clean, with less global impact.
 - H3 is minimally opinionated and won't limit your choices.
 
@@ -73,7 +72,7 @@ We first created an [H3](/guide/api/h3) app instance using `new H3()`:
 const app = new H3();
 ```
 
-[H3](/guide/api/h3) is a tiny class capable of [matching routes](/guide/basics/routing), [generating responses](/guide/basics/response) and calling [middleware](/guide/basics/routing#middleware) and [global hooks](/guide/api/h3#global-hooks).
+[H3](/guide/api/h3) is a tiny class capable of [matching routes](/guide/basics/routing), [generating responses](/guide/basics/response) and calling [middleware](/guide/basics/middleware) and [global hooks](/guide/api/h3#global-hooks).
 
 Then we add a route for handling HTTP GET requests to `/` path.
 
