--- a/docs/1.guide/1.basics/4.handler.md
+++ b/docs/1.guide/1.basics/4.handler.md
@@ -1,5 +1,5 @@
 ---
-icon: fluent:arrow-routing-20-regular
+icon: mdi:function
 ---
 
 # Event Handlers
@@ -28,7 +28,7 @@ The callback function can be sync or async:
 defineEventHandler(async (event) => "Response");
 ```
 
-You can optionally register some [middleware](#middleware) to run with event handler to intercept request, response or errors.
+You can optionally register some [middleware](/guide/basics/middleware) to run with event handler to intercept request, response or errors.
 
 ```js
 import { basicAuth } from "h3";
@@ -41,11 +41,11 @@ defineEventHandler({
 
 :read-more{to="/guide/basics/response" title="Response Handling"}
 
-:read-more{to="/guide/api/h3event" title="H3 Event"}
+:read-more{to="/guide/api/h3event" }
 
 ## Handler `.fetch`
 
-Event handlers defined with `defineEventHandler`, can act as a mini Web Standard app without even using [H3](/guide/api/h3) class.
+Event handlers defined with `defineEventHandler`, can act as a web handler without even using [H3](/guide/api/h3) class.
 
 ```js
 const handler = defineEventHandler(
