--- a/docs/1.guide/1.basics/5.response.md
+++ b/docs/1.guide/1.basics/5.response.md
@@ -4,33 +4,35 @@ icon: si:json-fill
 
 # Sending Response
 
-> Learn about different ways of handling responses.
+> H3 automatically converts any returned value into a web response.
 
-Values returned from [Event Handlers](/guide/basics/handler) are automatically converted to a Web [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) by ⚡ H3.
+Values returned from [Event Handlers](/guide/basics/handler) are automatically converted to a web [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) by H3.
+
+**Example:** Simple event handler function.
 
 ```js
-// Your event handler:
-defineEventHandler(() => ({ hello: "world" }));
-
-// H3 converts it to:
-defineEventHandler(
-  () =>
-    new Response(JSON.stringify({ hello: "world" }), {
-      headers: {
-        "content-type": "application/json;charset=UTF-8",
-      },
-    }),
-);
+const handler = defineEventHandler((event) => ({ hello: "world" }));
 ```
 
-> [!NOTE]
+H3 smartly converts handler:
+
+```js
+const handler = (event) =>
+  new Response(JSON.stringify({ hello: "world" }), {
+    headers: {
+      "content-type": "application/json;charset=UTF-8",
+    },
+  });
+```
+
+> [!TIP]
 > 🚀 H3 uses srvx `FastResponse` internally to optimize performances in Node.js runtime.
 
 If the returned value from event handler is a [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise) or from an [async function](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/async_function), H3 will wait for it to resolve before sending the response.
 
 If an error is thrown, H3 automatically handles it with error handler.
 
-:read-more{to="/guide/error" title="Error Handling"}
+:read-more{to="/guide/basics/error" title="Error Handling"}
 
 ## Preparing Response
 
@@ -146,6 +148,8 @@ Retuning an [Error](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Refe
 
 > [!TIP]
 > It is better to `throw` errors instead of returning them. This allows proper propagation from any nested utility.
+
+:read-more{to="/guide/basics/error" title="Error Handling"}
 
 ### `BigInt`
 
