--- a/docs/1.guide/1.basics/6.error.md
+++ b/docs/1.guide/1.basics/6.error.md
@@ -4,6 +4,8 @@ icon: tabler:error-404
 
 # Error Handling
 
+> Send errors by throwing an HTTPError.
+
 You can easily create standard HTTP errors using `HTTPError` with different syntaxes.
 
 ```js
@@ -69,7 +71,7 @@ app.get("/error", (event) => {
 
 ## Catching Errors
 
-You can use either [`onError`](/guide/api/h3#global-hooks) global hook or `onError` middleware(/guide/basics/routing#middleware) to catch errors.
+You can use either [`onError`](/guide/api/h3#global-hooks) global hook or `onError` [middleware](/guide/basics/middleware) to catch errors.
 
 ```js
 import { H3, onError } from "h3";
