--- a/docs/1.guide/0.index.md
+++ b/docs/1.guide/0.index.md
@@ -37,7 +37,7 @@ Create a new file for server entry:
 ```ts [server.mjs]
 import { H3, serve } from "h3";
 
-const app = new H3().get("/", () => "⚡️ Tadaa!");
+const app = new H3().get("/", (event) => "⚡️ Tadaa!");
 
 serve(app, { port: 3000 });
 ```
@@ -77,17 +77,14 @@ const app = new H3();
 Then we add a route for handling HTTP GET requests to `/` path.
 
 ```ts
-app.get("/", () => {
+app.get("/", (event) => {
   return { message: "⚡️ Tadaa!" };
 });
 ```
 
-:read-more{title="Adding Routes" to="/guide/basics/routing#adding-routes"}
+:read-more{title="Routing" to="/guide/basics/routing"}
 
-> [!TIP]
-> H3 uses [🌳 Rou3](https://github.com/h3js/rou3) for route matching. A lightweight and fast rou(ter) for JavaScript.
-
-We simply returned an object. H3 automatically converts values into web responses for us.
+We simply returned an object. H3 automatically [converts](/guide/basics/response#response-types) values into web responses.
 
 :read-more{title="Sending Response" to="/guide/basics/response"}
 
@@ -100,9 +97,9 @@ serve(app, { port: 3000 });
 > [!TIP]
 > The `serve` method is powered by [💥 Srvx](https://srvx.h3.dev/), a runtime-agnostic universal server listener based on web standards that works seamlessly with [Deno](https://deno.com/), [Node.js](https://nodejs.org/) and [Bun](https://bun.sh/).
 
-With [⚡️ H3](/guide/api/h3) instance you also always have [`app.fetch`](/guide/api/h3#appfetch) which can be directly used to run H3 apps in any web-compatible runtime or even directly called for testing purposes.
+We also have [`app.fetch`](/guide/api/h3#h3fetch) which can be directly used to run H3 apps in any web-compatible runtime or even directly called for testing purposes.
 
-:read-more{to="/guide/api/h3#appfetch" title="app.fetch"}
+:read-more{to="/guide/api/h3#h3fetch" title="H3.fetch"}
 
 ```js [test.mjs]
 import { H3, serve } from "h3";
@@ -114,9 +111,7 @@ const response = await app.fetch("/");
 console.log(await response.text());
 ```
 
-**Example:** Using H3 from CDN
-
-You can directly import `h3` library from CDN. This method can be used for Bun, Deno and other runtimes such as Cloudflare Workers.
+You can directly import `h3` library from CDN alternatively. This method can be used for Bun, Deno and other runtimes such as Cloudflare Workers.
 
 ```js
 import { H3 } from "https://esm.sh/h3";
