--- a/docs/1.guide/1.basics/4.handler.md
+++ b/docs/1.guide/1.basics/4.handler.md
@@ -98,12 +98,12 @@ export default defineEventHandler((event) => "Hello!");
 
 ## Converting to Handler
 
-There are situations that you might want to convert an event handler or utility made for Node.js or another framework to h3.
-There are built-in utils to do this.!
+There are situations that you might want to convert an event handler or utility made for Node.js or another framework to H3.
+There are built-in utils to do this.
 
 ### From Web Handlers
 
-Request handlers with [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) => [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) syntax can be converted into H3 event handlers using `fromWebHandler` utility or [H3.mount](/guide/api/h3#h3mount).
+Request handlers with [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) => [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) signuture can be converted into H3 event handlers using `fromWebHandler` utility or [H3.mount](/guide/api/h3#h3mount).
 
 ```js
 import { H3, fromWebHandler } from "h3";
@@ -113,10 +113,10 @@ export const app = new H3();
 const webHandler = (request) => new Response("👋 Hello!"));
 
 // Using fromWebHandler utiliy
-app.get("/web", fromWebHandler(webHandler));
+app.all("/web", fromWebHandler(webHandler));
 
 // Using simple wrapper
-app.get("/web", event => webHandler(event.req));
+app.all("/web", event => webHandler(event.req));
 
 // Using app.mount
 app.mount("/web", webHandler)
