--- a/docs/1.guide/1.basics/6.error.md
+++ b/docs/1.guide/1.basics/6.error.md
@@ -6,7 +6,11 @@ icon: tabler:error-404
 
 > Send errors by throwing an HTTPError.
 
-You can easily create standard HTTP errors using `HTTPError` with different syntaxes.
+H3 captures all possible errors during [request lifecycle](/guide/basics/lifecycle).
+
+## `HTTPError`
+
+You can create and throw HTTP errors using `HTTPError` with different syntaxes.
 
 ```js
 import { HTTPError } from "h3";
@@ -44,23 +48,23 @@ This will end the request with `400 - Bad Request` status code and the following
 }
 ```
 
-**Error Fields:**
+### `HTTPError` Fields
 
-- `status`: HTTP status code in range 200...599
-- `statusText`: HTTP status text.
-- `message`: HTTP Error message in JSON body.
-- `unhandled`: Flag to indicate error was not handled by the application.
-- `data`: Additional data to attach in the error JSON body under `data` key.
-- `body`: Additional top level JSON body properties to attach in the error JSON body.
-- `headers`: Additional HTTP headers to be sent in error response.
-- `cause`: Original error object that caused this error. Very useful for tracing and debugging!
+- `status`: HTTP status code in the range 200–599.
+- `statusText`: HTTP status text to be sent in the response header.
+- `message`: Error message to be included in the JSON body.
+- `data`: Additional data to be attached under the `data` key in the error JSON body.
+- `body`: Additional top-level properties to be attached in the error JSON body.
+- `headers`: Additional HTTP headers to be sent in the error response.
+- `cause`: The original error object that caused this error, useful for tracing and debugging.
+- `unhandled`: Indicates whether the error was thrown for unknown reasons. See [Unhandled Errors](#unhandled-errors).
 
 > [!IMPORTANT]
-> Error `statusText` should be short (max 512 to 1024 characters) and only include tab, spaces or visible ASCII charactersand extended characters (byte value 128–255).
+> Error `statusText` should be short (max 512 to 1024 characters) and only include tab, spaces or visible ASCII characters and extended characters (byte value 128–255). Prefer `message` in JSON body for extended message.
 
 ## Unhandled Errors
 
-Any error that occurs during calling an [Event Handler](/guide/basics/handler) without using `HTTPError` will be processed as an "unhandled" error. H3 hides certain fields (`data`, `body` and `message`) in HTTP response for this errors for enhanced security.
+Any error that occurs during calling [request lifecycle](/guide/basics/lifecycle) without using `HTTPError` will be processed as an _unhandled_ error.
 
 ```js
 app.get("/error", (event) => {
@@ -69,9 +73,12 @@ app.get("/error", (event) => {
 });
 ```
 
+> [!TIP]
+> For enhanced security, H3 hides certain fields of unhandled errors (`data`, `body`, `stack` and `message`) in JSON response.
+
 ## Catching Errors
 
-You can use either [`onError`](/guide/api/h3#global-hooks) global hook or `onError` [middleware](/guide/basics/middleware) to catch errors.
+Using global [`onError`](/guide/api/h3#global-hooks) hook:
 
 ```js
 import { H3, onError } from "h3";
@@ -82,14 +89,20 @@ const app = new H3({
     console.error(error);
   },
 });
+```
+
+Using [`onError` middleware](/guide/basics/middleware) to catch errors.
+
+```js
+import { onError } from "h3";
 
 // Handling errors using middleware
 app.use(
-  onError(event, (error) => {
+  onError(event, (event, error) => {
     console.error(error);
   }),
 );
 ```
 
-> [!IMPORTANT]
+> [!TIP]
 > When using nested apps, global hooks of sub-apps will not be called. Therefore it is better to use `onError` middleware.
