--- a/docs/1.guide/900.api/1.h3.md
+++ b/docs/1.guide/900.api/1.h3.md
@@ -4,24 +4,26 @@ icon: material-symbols:bolt-rounded
 
 # H3
 
-> H3 App Instance is the core of server that handles incoming requests.
+> H3 class is the core of server.
 
 You can create a new H3 app instance using `new H3()`:
 
-```js [server.mjs]
+```js
 import { H3 } from "h3";
 
-const app = new H3(/* optional config */);
+const app = new H3({
+  /* optional config */
+});
 ```
 
-## H3 App Methods
+## `H3` Methods
 
 ### `H3.fetch`
 
-A [fetch](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-like API allowing to fetch app routes.
+A [fetch](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-compatible function allowing to fetch app routes.
 
-- Input can be a URL, relative path or standard [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) object.
-- Returned value is a standard [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) promise.
+- Input can be a relative path, [URL](https://developer.mozilla.org/en-US/docs/Web/API/URL), or [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request).
+- Returned value is a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) promise.
 
 ```ts
 const response = await app.fetch("/");
@@ -36,7 +38,7 @@ Register route handler for specific HTTP method.
 const app = new H3().on("GET", "/", () => "OK");
 ```
 
-:read-more{to="/guide/routing"}
+:read-more{to="/guide/basics/routing" title="Routing"}
 
 ### `H3.[method]`
 
@@ -56,7 +58,7 @@ const app = new H3().all("/", () => "OK");
 
 ### `H3.use`
 
-Register a global middleware handler.
+Register a global [middleware](/guide/basics/middleware).
 
 ```js
 const app = new H3()
@@ -66,11 +68,25 @@ const app = new H3()
   .all("/", () => "OK");
 ```
 
-:read-more{to="/guide/routing#adding-middleware"}
+:read-more{to="/guide/basics/middleware" title="Middleware"}
 
 ### `H3.handler`
 
-An H3 compatible [event handler](/guide/handler) useful to compose multiple H3 app instances.
+An H3 [event handler](/guide/basics/handler) useful to compose multiple H3 app instances.
+
+**Example:** Nested apps.
+
+```js
+import { H3, serve, redirect, withBase } from "h3";
+
+const nestedApp = new H3().get("/test", () => "/test (sub app)");
+
+const app = new H3()
+  .get("/", (event) => redirect(event, "/api/test"))
+  .all("/api/**", withBase("/api", nestedApp.handler));
+
+serve(app);
+```
 
 ### `H3.mount`
 
@@ -98,7 +114,7 @@ const app = new H3()
 > [!TIP]
 > Similarly, you can mount an H3 app in [Hono](https://hono.dev/docs/api/hono#mount) or [Elysia](https://elysiajs.com/patterns/mount#mount-1).
 
-## H3 App Options
+## `H3` Options
 
 You can pass global app configuration when initializing an app.
 
@@ -135,10 +151,10 @@ const app = new H3({
 });
 ```
 
-> [!NOTE]
-> Global hooks only apply to main H3 app not registered sub-apps. Use [Middleware](/handler#middleware) for fine gained hooks.
+> [!IMPORTANT]
+> Global hooks only run from main H3 app and **not** sub-apps. Use [middleware](/guide/basics/middleware) for more flexibility.
 
-## H3 App Properties
+## `H3` Properties
 
 ### `H3.config`
 
