--- a/docs/1.guide/1.basics/1.lifecycle.md
+++ b/docs/1.guide/1.basics/1.lifecycle.md
@@ -15,7 +15,7 @@ When An HTTP request is made by Browser or [fetch()](https://developer.mozilla.o
 ```mermaid
 %%{init: {'theme':'neutral'}}%%
 flowchart LR
-  A1["<code>fetch()</code>"] --> A2["<code>server.fetch(request)</code>"]
+  A1["<code>fetch(request)</code>"] --> A2["<code>server.fetch(request)</code>"]
 
 click A2 "/guide/api/h3#h3fetch"
 ```
@@ -25,7 +25,7 @@ click A2 "/guide/api/h3#h3fetch"
 
 ## 2. Accept Request
 
-H3 Initializes an [`H3Event`](/guide/api/h3event) instance from incoming request, calls [`onRequest`](/guide/api/h3#global-hooks) global hook and finally [`h3.handler`](/guide/api/h3#apphandler) with the initialized event.
+H3 Initializes an [`H3Event`](/guide/api/h3event) instance from incoming request, calls [`onRequest`](/guide/api/h3#global-hooks) global hook and finally [`H3.handler`](/guide/api/h3#h3handler) with the initialized event.
 
 ```mermaid
 %%{init: {'theme':'neutral'}}%%
@@ -39,7 +39,7 @@ click B3 "/guide/api/h3#apphandler"
 
 ## 3. Dispatch Request
 
-H3 matches route based on `request.url` and `request.method`, calls global middleware wrappers and finally matched route handler function with event.
+H3 [matches route](/guide/basics/routing) based on `request.url` and `request.method`, calls global [middleware](/guide/basics/middleware) and finally matched route handler function with event.
 
 ```mermaid
 %%{init: {'theme':'neutral'}}%%
@@ -51,16 +51,16 @@ click C2 "/guide/basics/middleware"
 ```
 
 > [!TIP]
-> 🚀 Internally, H3 uses srvx `FastURL` instead of `new URL(req.url).pathname` to optimize speed.
+> 🚀 Internally, H3 uses srvx `FastURL` instead of `new URL(req.url).pathname`.
 
 ## 4. Send Response
 
-H3 [converts](/guide/basics/response#response-types) returned value and prepared headers into a standard [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response), calls [`onBeforeResponse`](/guide/api/h3#global-hooks) and finally returns response back to the server fetch handler.
+H3 [converts](/guide/basics/response#response-types) returned value and [prepared headers](/guide/basics/response#preparing-response) into a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response), calls [`onBeforeResponse`](/guide/api/h3#global-hooks) global hook and finally returns response back to the server fetch handler.
 
 ```mermaid
 %%{init: {'theme':'neutral'}}%%
 flowchart LR
- D1["ReturnedValue => Response"] --> D2["<code>onBeforeResponse(response)</code>"] --> D3["Response"]
+ D1["Returned Value => Response"] --> D2["<code>onBeforeResponse(response)</code>"] --> D3["Response"]
 
 click D1 "/guide/basics/response"
 click D2 "/guide/api/h3#global-hooks"
