--- a/docs/1.guide/1.basics/5.response.md
+++ b/docs/1.guide/1.basics/5.response.md
@@ -14,7 +14,7 @@ Values returned from [Event Handlers](/guide/basics/handler) are automatically c
 const handler = defineEventHandler((event) => ({ hello: "world" }));
 ```
 
-H3 smartly converts handler:
+H3 smartly converts handler into:
 
 ```js
 const handler = (event) =>
@@ -36,7 +36,7 @@ If an error is thrown, H3 automatically handles it with error handler.
 
 ## Preparing Response
 
-Before sending a response in main handler, you can prepare headers and status.
+Before returning a response in main handler, you can prepare response headers and status using [`event.res`](/guide/api/h3event#eventres).
 
 ```js
 defineEventHandler((event) => {
@@ -55,7 +55,7 @@ defineEventHandler((event) => {
 
 ## Response Types
 
-H3 converts values JavaScript values into web [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response/Response).
+H3 smartly converts JavaScript values into web [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response/Response).
 
 ### JSON Serializable Value
 
@@ -68,14 +68,14 @@ app.get("/", (event) => ({ hello: "world" }));
 ```
 
 > [!TIP]
-> You can add `toJSON()` method in object to customize serialization behavior. Check [MDN docs](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify) for more info.
+> Returned objects with `.toJSON()` property can customize serialization behavior. Check [MDN docs](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify) for more info.
 
 ### String
 
 Returning a string value, sends it as plain text body.
 
 > [!NOTE]
-> If not setting `content-type`, it can default to `text/plain;charset=UTF-8`.
+> If not setting `content-type` header, it can default to `text/plain;charset=UTF-8`.
 
 **Example:** Send HTML response.
 
@@ -94,24 +94,26 @@ import { html } from "h3";
 app.get("/", (event) => html(event, "<h1>hello world</h1>"));
 ```
 
-### Web `Response`
+### `Response`
 
-Send a standard web [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response/Response).
+Returning a web [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response/Response), sends-it as final reponse.
 
 **Example:**
 
 ```ts
-app.get("/", (event) => Response.json({ hello: "world" }));
+app.get(
+  "/",
+  (event) =>
+    new Response("Hello, world!", { headers: { "x-powered-by": "H3" } }),
+);
 ```
 
-> [!NOTE]
-> When sending a `Response`, any prepared headers that set using `event.res.headers` before, will be merged as default headers. `event.res.{status/statusText}` will be ignored.
-> <br>
-> For performance reasons, it is best to only set headers only from final `Response`.
+> [!IMPORTANT]
+> When sending a `Response`, any [prepared headers](#preparing-response) that set before, will be merged as default headers. `event.res.{status,statusText}` will be ignored. For performance reasons, it is best to only set headers only from final `Response`.
 
 ### `ReadableStream` or `Readable`
 
-Send a standard web [ReadableStream](https://developer.mozilla.org/en-US/docs/Web/API/ReadableStream) or node [Readable](https://nodejs.org/api/stream.html#readable-streams).
+Returning a [`ReadableStream`](https://developer.mozilla.org/en-US/docs/Web/API/ReadableStream) or Node.js [`Readable`](https://nodejs.org/api/stream.html#readable-streams) sends it as stream.
 
 ### `ArrayBuffer` or `Uint8Array` or `Buffer`
 
@@ -121,13 +123,13 @@ Send binary [ArrayBuffer](https://developer.mozilla.org/en-US/docs/Web/JavaScrip
 
 ### `Blob`
 
-Send a standard web [Blob](https://developer.mozilla.org/en-US/docs/Web/API/Blob) as stream.
+Send a [`Blob`](https://developer.mozilla.org/en-US/docs/Web/API/Blob) as stream.
 
 `Content-type` and `Content-Length` headers will be automatically set.
 
 ### `File`
 
-Send a standard web [File](https://developer.mozilla.org/en-US/docs/Web/API/File) as stream.
+Send a [`File`](https://developer.mozilla.org/en-US/docs/Web/API/File) as stream.
 
 `Content-type`, `Content-Length` and `Content-Disposition` headers will be automatically set.
 
@@ -144,9 +146,9 @@ Sends a response with empty body.
 
 ### `Error`
 
-Retuning an [Error](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error) instance will send it.
+Retuning an [`Error`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error) instance will send it.
 
-> [!TIP]
+> [!IMPORTANT]
 > It is better to `throw` errors instead of returning them. This allows proper propagation from any nested utility.
 
 :read-more{to="/guide/basics/error" title="Error Handling"}
@@ -156,11 +158,13 @@ Retuning an [Error](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Refe
 Value will be sent as stringified version of BigInt number.
 
 > [!NOTE]
-> Returning a JSON object, does not allows BigInt serialization. You need to implement `toJSON`. Check [MDN docs](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify) for more info.
+> Returning a JSON object, does not allows BigInt serialization. You need to implement `.toJSON`. Check [MDN docs](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify) for more info.
 
 ### `Symbol` or `Function`
 
-Returning Symbol or Function has undetermined behavior. Current version sends a string-like representation of unknown Symbols and Functions but it might be changed to throw an error, never return them. There are some internal known Symbols h3 internally uses (can change in future):
+**Returning Symbol or Function has undetermined behavior.** Currently, H3 sends a string-like representation of unknown Symbols and Functions but this behavior might be changed to throw an error in the future versions.
+
+There are some internal known Symbols H3 internally uses:
 
 - `Symbol.for("h3.notFound")`: Indicate no route is found to throw a 404 error.
-- `Symbol.for("h3.handled")`: Indicate request is somehow handled and h3 should not continue (Node.js specific).
+- `Symbol.for("h3.handled")`: Indicate request is somehow handled and H3 should not continue (Node.js specific).
