--- a/docs/1.guide/901.advanced/1.websocket.md
+++ b/docs/1.guide/901.advanced/1.websocket.md
@@ -33,9 +33,69 @@ serve(app, {
 
 **Full example:**
 
-<!-- automd:file code lang="js" src="../../examples/websocket.mjs" -->
+<!-- automd:file code lang="js" src="../../../examples/websocket.mjs" -->
 
-<!-- ⚠️  (file) ENOENT: no such file or directory, open '/home/runner/work/h3/h3/docs/examples/websocket.mjs' -->
+```js [websocket.mjs]
+import { H3, serve, defineWebSocketHandler } from "h3";
+import { plugin as ws } from "crossws/server";
+
+export const app = new H3();
+
+const demoURL =
+  "https://raw.githubusercontent.com/h3js/crossws/refs/heads/main/playground/public/index.html";
+
+app.get("/", () =>
+  fetch(demoURL).then(
+    (res) =>
+      new Response(res.body, { headers: { "Content-Type": "text/html" } }),
+  ),
+);
+
+app.get(
+  "/_ws",
+  defineWebSocketHandler({
+    // upgrade(req) {},
+    open(peer) {
+      console.log("[open]", peer);
+
+      // Send welcome to the new client
+      peer.send("Welcome to the server!");
+
+      // Join new client to the "chat" channel
+      peer.subscribe("chat");
+
+      // Notify every other connected client
+      peer.publish("chat", `[system] ${peer} joined!`);
+    },
+
+    message(peer, message) {
+      console.log("[message]", peer);
+
+      if (message.text() === "ping") {
+        // Reply to the client with a ping response
+        peer.send("pong");
+        return;
+      }
+
+      // The server re-broadcasts incoming messages to everyone
+      peer.publish("chat", `[${peer}] ${message}`);
+
+      // Echo the message back to the sender
+      peer.send(message);
+    },
+
+    close(peer) {
+      console.log("[close]", peer);
+      peer.publish("chat", `[system] ${peer} has left the chat!`);
+      peer.unsubscribe("chat");
+    },
+  }),
+);
+
+serve(app, {
+  plugins: [ws({ resolve: async (req) => (await app.fetch(req)).crossws })],
+});
+```
 
 <!-- /automd -->
 
@@ -47,8 +107,31 @@ H3 has a built-in API to create server-sent events using `createEventStream(even
 
 ### Example
 
-<!-- automd:file code lang="js" src="../../examples/server-sent-events.mjs" -->
+<!-- automd:file code lang="js" src="../../../examples/server-sent-events.mjs" -->
 
-<!-- ⚠️  (file) ENOENT: no such file or directory, open '/home/runner/work/h3/h3/docs/examples/server-sent-events.mjs' -->
+```js [server-sent-events.mjs]
+import { H3, serve, createEventStream } from "h3";
+
+export const app = new H3();
+
+app.get("/", (event) => {
+  const eventStream = createEventStream(event);
+
+  // Send a message every second
+  const interval = setInterval(async () => {
+    await eventStream.push("Hello world");
+  }, 1000);
+
+  // cleanup the interval when the connection is terminated or the writer is closed
+  eventStream.onClosed(() => {
+    console.log("Connection closed");
+    clearInterval(interval);
+  });
+
+  return eventStream.send();
+});
+
+serve(app);
+```
 
 <!-- /automd -->
