--- a/docs/1.guide/901.advanced/9.nightly.md
+++ b/docs/1.guide/901.advanced/9.nightly.md
@@ -4,7 +4,7 @@ icon: game-icons:barn-owl
 
 # Nightly Builds
 
-You can opt-in to early test latest h3 changes using automated nightly release channel.
+You can opt-in to early test latest H3 changes using automated nightly release channel.
 
 If you are directly using `h3` as a dependency in your project:
 
@@ -15,27 +15,3 @@ If you are directly using `h3` as a dependency in your project:
   }
 }
 ```
-
-If you are using a framework (for example [Nuxt](https://nuxt.com/) or [Nitro](https://nitro.build/)) that is using `h3`:
-
-pnpm and yarn:
-
-```json
-{
-  "resolutions": {
-    "h3": "npm:h3-nightly@latest"
-  }
-}
-```
-
-npm:
-
-```json
-{
-  "overrides": {
-    "h3": "npm:h3-nightly@latest"
-  }
-}
-```
-
-**Note:** Make sure to recreate lockfile and `node_modules` after reinstall to avoid hoisting issues.
